--- a/src/demo/includes/main-nav.html
+++ b/src/demo/includes/main-nav.html
@@ -15,6 +15,7 @@
             <li class="<!--(bake-start _if="index")-->active<!--(bake-end)-->"><a href="index.html">Home</a></li>
             <li class="<!--(bake-start _if="buttons")-->active<!--(bake-end)-->"><a href="buttons.html">Buttons</a></li>
             <li class="<!--(bake-start _if="radios")-->active<!--(bake-end)-->"><a href="radios.html">Radios</a></li>
+            <li class="<!--(bake-start _if="links")-->active<!--(bake-end)-->"><a href="links.html">Links</a></li>
             <!-- <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <span class="caret"></span></a>
               <ul class="dropdown-menu" role="menu">
