--- a/src/demo/includes/main-nav.html
+++ b/src/demo/includes/main-nav.html
@@ -12,22 +12,26 @@
         </div>
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
-            <li class="<!--(bake-start _if="index")-->active<!--(bake-end)-->"><a href="index.html">Home</a></li>
-            <li class="<!--(bake-start _if="buttons")-->active<!--(bake-end)-->"><a href="buttons.html">Buttons</a></li>
-            <li class="<!--(bake-start _if="radios")-->active<!--(bake-end)-->"><a href="radios.html">Radios</a></li>
-            <li class="<!--(bake-start _if="links")-->active<!--(bake-end)-->"><a href="links.html">Links</a></li>
-            <!-- <li class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <span class="caret"></span></a>
+            <li class="<!--(bake-start _if="index")-->active<!--(bake-end)-->">
+              <a href="index.html">Home</a>
+            </li>
+            <li class="<!--(bake-start _if="api")-->active<!--(bake-end)-->">
+              <a href="api-settings.html">API & Settings</a>
+            </li>
+            <li class="<!--(bake-start _if="publishers")-->active<!--(bake-end)-->">
+              <a href="publishers.html">Publishers</a>
+            </li>
+            <li class="<!--(bake-start _if="subscribers")-->active<!--(bake-end)-->">
+              <a href="subscribers.html">Subscribers</a>
+            </li>
+            <li class="dropdown<!--(bake-start _if="examples")--> active<!--(bake-end)-->">
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown">Examples <span class="caret"></span></a>
               <ul class="dropdown-menu" role="menu">
-                <li><a href="#">Action</a></li>
-                <li><a href="#">Another action</a></li>
-                <li><a href="#">Something else here</a></li>
-                <li class="divider"></li>
-                <li class="dropdown-header">Nav header</li>
-                <li><a href="#">Separated link</a></li>
-                <li><a href="#">One more separated link</a></li>
+                <li><a href="buttons.html">Buttons</a></li>
+                <li><a href="radios.html">Radios</a></li>
+                <li><a href="links.html">Links</a></li>
               </ul>
-            </li> -->
+            </li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
