Tweaks, features, updated

--- a/src/demo/includes/publisher-templates.html
+++ b/src/demo/includes/publisher-templates.html
@@ -3,25 +3,25 @@
   <li>
     <a href="#" class="jqr-publisher"
         data-jqr-publish-events="/links/event/"
-        data-jqr-publish-value="link.attr.val1">link.attr.val1
+        data-jqr-publish-value="link.attr.val1">Link sample 1
     </a>
   </li>
   <li>
     <a href="#" class="jqr-publisher"
         data-jqr-publish-events="/links/event/"
-        data-jqr-publish-value="link.attr.val2">link.attr.val2
+        data-jqr-publish-value="link.attr.val2">Link sample 2
     </a>
   </li>
   <li>
     <a href="#" class="jqr-publisher"
         data-jqr-publish-events="/links/event/"
-        data-jqr-publish-value="link.attr.val3">link.attr.val3
+        data-jqr-publish-value="link.attr.val3">Link sample 3
     </a>
   </li>
   <li>
     <a href="#" class="jqr-publisher"
         data-jqr-publish-events="/links/event/"
-        data-jqr-publish-value="link.attr.val4">link.attr.val4
+        data-jqr-publish-value="link.attr.val4">Link sample 4
     </a>
   </li>
 </ul>
@@ -30,43 +30,43 @@
 <!--(bake-start _if="buttonsdemo")-->
 <button type="button" class="btn btn-sm btn-default jqr-publisher"
     data-jqr-publish-events="/buttons/event/"
-    data-jqr-publish-value="button.attr.val1">button.attr.val1</button>
+    data-jqr-publish-value="button.attr.val1">Button sample 1</button>
 
 <button type="button" class="btn btn-sm btn-default jqr-publisher"
     data-jqr-publish-events="/buttons/event/"
-    data-jqr-publish-value="button.attr.val2">button.attr.val2</button>
+    data-jqr-publish-value="button.attr.val2">Button sample 2</button>
 
 <button type="button" class="btn btn-sm btn-default jqr-publisher"
     data-jqr-publish-events="/buttons/event/"
-    data-jqr-publish-value="button.attr.val3">button.attr.val3</button>
+    data-jqr-publish-value="button.attr.val3">Button sample 3</button>
 
 <button type="button" class="btn btn-sm btn-default jqr-publisher"
     data-jqr-publish-events="/buttons/event/"
-    data-jqr-publish-value="button.attr.val4">button.attr.val4</button>
+    data-jqr-publish-value="button.attr.val4">Button sample 4</button>
 <!--(bake-end)-->
 
 <!--(bake-start _if="radiosdemo")-->
 <label class="checkbox-inline">
   <input type="radio" name="radios" class="jqr-publisher"
     data-jqr-publish-events="/radio/events/"
-    value="radio.attr.val1" /> radio.attr.val1
+    value="radio.attr.val1" /> Radio sample 1
 </label>
 
 <label class="checkbox-inline">
   <input type="radio" name="radios" class="jqr-publisher"
     data-jqr-publish-events="/radio/events/"
-    value="radio.attr.val2" /> radio.attr.val2
+    value="radio.attr.val2" /> Radio sample 2
 </label>
 
 <label class="checkbox-inline">
   <input type="radio" name="radios" class="jqr-publisher"
     data-jqr-publish-events="/radio/events/"
-    value="radio.attr.val3" /> radio.attr.val3
+    value="radio.attr.val3" /> Radio sample 3
 </label>
 
 <label class="checkbox-inline">
   <input type="radio" name="radios" class="jqr-publisher"
     data-jqr-publish-events="/radio/events/"
-    value="radio.attr.val4" /> radio.attr.val4
+    value="radio.attr.val4" /> Radio sample 4
 </label>
 <!--(bake-end)-->
